[package]
name = "grpc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
tonic = "0.10.2"
prost = "0.12.3"
rand = { version = "0.8.5", features = [] }

[build-dependencies]
tonic-build = "0.10.2"
